dev/nats/service-node.yaml
#
# dev only!! no authentication!!
#
apiVersion: v1
kind: Service
metadata:
  name: nats-node
  labels:
    app: nats
spec:
  selector:
    app: nats
  type: NodePort
  ports:
  - name: monitor
    port: 8222
    targetPort: 8222
    protocol: TCP
    nodePort: 31130
